src/backend/k8s/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard-app
  labels: 
    app: dashboard-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashboard-app
  template:
    metadata:
      labels:
        app: dashboard-app
    spec:
      containers:
      - image: jurabek/dashboard
        imagePullPolicy: IfNotPresent
        name: dashboard-app
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "32Mi"
            cpu: "60m"
          limits:
            memory: "64Mi"
            cpu: "100m"

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identity-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: identity-api
  template:
    metadata:
      labels:
        app: identity-api
    spec:
      containers:
      - name: identity-api
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        image: jurabek/identity
        readinessProbe:
          httpGet:
            path: /hc
            port: 80
          initialDelaySeconds: 60
          timeoutSeconds: 5
          periodSeconds: 30
          successThreshold: 1
          failureThreshold: 5
        livenessProbe:
          httpGet:
            path: /liveness
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 15
          successThreshold: 1
          failureThreshold: 5
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
---
---
