src/backend/k8s/services.yml
---
apiVersion: v1
kind: Service
metadata:
  name: dashboard-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    name: http
  selector:
    app: dashboard-app
---




---


---
apiVersion: v1
kind: Service
metadata:
  name: identity-api
spec:
  type: ClusterIP
  ports:
  - port: 80
    name: http
  selector:
    app: identity-api
