src/backend/k8s/ingress.yml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: restaurant-ingress
  labels:
    app: frontend
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^/dashboard/(.*) /$1 break;
      proxy_set_header    X-Forwarded-Prefix /order;
      
spec:
  rules:
    - host: api.restaurant.io
      http:
        paths:
          - path: /menu
            backend:
              serviceName: menu-api
              servicePort: http
          - path: /basket
            backend:
              serviceName: basket-api
              servicePort: http
          - path: /identity
            backend:
              serviceName: identity-api
              servicePort: http
          - path: /order
            backend:
              serviceName: order-api
              servicePort: http
          - path: /dashboard
            backend:
              serviceName: dashboard-app
              servicePort: http
